Health And Language Fix
Redstone health fix, language fix for diamond nugget. Git ignore update.

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@
 /Ore Spiders/src/minecraft/mcpmod.info
 /Ore Spiders/src/minecraft/Start.java
 /Ore Spiders/src/minecraft/deobfuscation_data-1.6.4.lzma
+/Ore Spiders/modsrc/
